--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "myhome",
+  "name": "social_network",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp": "^4.0.2",
-    "gulp-watch": "^5.0.1",
-    "normalize.css": "^8.0.1"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.27.7",
-    "gulp-sass": "^4.1.1",
-    "sass": "^1.44.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "browser-sync": "^2.27.7",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.0.0",
+    "gulp-watch": "^5.0.1",
+    "sass": "^1.45.1"
+  },
+  "dependencies": {
+    "node-sass": "^7.0.0"
+  }
 }
